components structure / rename
- every folders has now its own folder
- title in index.html was changed to "Supabase + SolidJS Chat"

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             name="theme-color"
             content="#ffffff"
         />
-        <title>Solid Starter Kit</title>
+        <title>Supabase + SolidJS Chat</title>
     </head>
     <body class="antialiased">
         <noscript>You need to enable JavaScript to run this app.</noscript>
